Se agregan media queries al css para que el proyecto sea responsive

--- a/postres_clasicos.html
+++ b/postres_clasicos.html
@@ -93,7 +93,7 @@
         </div>
         <hr>
 
-        <div class="parte3">
+        <div class="parte3 al_reves">
             <div class="contenedor3">
                 <div class="parrafo3">
                     <p class="subtitulo">
@@ -149,7 +149,7 @@
         </div>
         <hr>
 
-        <div class="parte3">
+        <div class="parte3 al_reves">
             <div class="contenedor3">
                 <div class="parrafo3">
                     <p class="subtitulo">
@@ -205,7 +205,7 @@
         </div>
         <hr>
 
-        <div class="parte3">
+        <div class="parte3 al_reves">
             <div class="contenedor3">
                 <div class="parrafo3">
                     <p class="subtitulo">
