--- a/envios.html
+++ b/envios.html
@@ -76,7 +76,7 @@
             <div class="contenedor4">
 
                 <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1636.0808331340745!2d-56.17787528433256!3d-34.90239223820869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81b4c1267fa5%3A0xecea05927f6be283!2sAv.%2018%20de%20Julio%201805%2C%2011200%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1703511268738!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1636.0808331340745!2d-56.17787528433256!3d-34.90239223820869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81b4c1267fa5%3A0xecea05927f6be283!2sAv.%2018%20de%20Julio%201805%2C%2011200%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1703511268738!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
                 </div>
 
             </div>
