Se hace la web completamente responsive y se traslada todo el codigo css a sass

--- a/html/postres_clasicos.html
+++ b/html/postres_clasicos.html
@@ -29,7 +29,7 @@
 
             <div>
                 <a class="navbar-brand" href="index.html">
-                    <img src="imagenes/logo.png" alt="" class="logo">
+                    <img src="../imagenes/logo.png" alt="" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,15 +63,15 @@
     <hr>
 
     <!-- CONTENIDO DE LA PAGINA -->
-    <section>
+    <section class="pc">
 
-        <div class="parte3">
-            <div class="imagen3">
-                <img src="imagenes/carrotcake.png" alt="carrot cake">
+        <div class="pc-contenedor">
+            <div class="pc-contenedor-img">
+                <img src="../imagenes/carrotcake.png" alt="carrot cake">
             </div>
-            <div class="contenedor3">
-                <div class="parrafo3">    
-                    <p class="subtitulo">
+            <div class="pc-contenedor-text">
+                <div class="pc-contenedor-text-int">    
+                    <p class="pc-contenedor-text-int-subtitulo">
                         Carrot Cake
                     </p>
                     <p>
@@ -83,8 +83,8 @@
                     <p>
                         Tamaño grande (12 porciones, 3kg): $U1,300.00
                     </p>
-                    <div class="ext_boton">
-                        <button class="boton">
+                    <div class="pc-contenedor-text-int-boton">
+                        <button class="pc-contenedor-text-int-boton-int">
                             Comprar
                         </button>
                     </div>
@@ -93,10 +93,11 @@
         </div>
         <hr>
 
-        <div class="parte3">
-            <div class="contenedor3">
-                <div class="parrafo3">
-                    <p class="subtitulo">
+        <div class="pc-contenedor al_reves">
+            <div class="pc-contenedor-text">
+                <div class="pc-contenedor-text-int">
+
+                    <p class="pc-contenedor-text-int-subtitulo">
                         Cheese Cake
                     </p>
                     <p>
@@ -108,26 +109,28 @@
                     <p>
                         Tamaño grande (12 porciones, 3kg): $U1,400.00
                     </p>
-                    <div class="ext_boton">
-                        <button class="boton">
+
+                    <div class="pc-contenedor-text-int-boton">
+                        <button class="pc-contenedor-text-int-boton-int">
                             Comprar
                         </button>
                     </div>
+
                 </div>
             </div>
-            <div class="imagen3">
-                <img src="imagenes/cheesecake.png" alt="cheese cake">
+            <div class="pc-contenedor-img">
+                <img src="../imagenes/cheesecake.png" alt="cheese cake">
             </div>
         </div>
         <hr>
 
-        <div class="parte3">
-            <div class="imagen3">
-                <img src="imagenes/lemonpie.png" alt="lemon pie">
+        <div class="pc-contenedor">
+            <div class="pc-contenedor-img">
+                <img src="../imagenes/lemonpie.png" alt="lemon pie">
             </div>
-            <div class="contenedor3">
-                <div class="parrafo3">
-                    <p class="subtitulo">
+            <div class="pc-contenedor-text">
+                <div class="pc-contenedor-text-int">
+                    <p class="pc-contenedor-text-int-subtitulo">
                         Lemon Pie
                     </p>
                     <p>
@@ -139,8 +142,8 @@
                     <p>
                         Tamaño grande (12 porciones, 3kg): $U1,350.00
                     </p>
-                    <div class="ext_boton">
-                        <button class="boton">
+                    <div class="pc-contenedor-text-int-boton">
+                        <button class="pc-contenedor-text-int-boton-int">
                             Comprar
                         </button>
                     </div>
@@ -149,10 +152,10 @@
         </div>
         <hr>
 
-        <div class="parte3">
-            <div class="contenedor3">
-                <div class="parrafo3">
-                    <p class="subtitulo">
+        <div class="pc-contenedor al_reves">
+            <div class="pc-contenedor-text">
+                <div class="pc-contenedor-text-int">
+                    <p class="pc-contenedor-text-int-subtitulo">
                         Rogel
                     </p>
                     <p>
@@ -164,26 +167,26 @@
                     <p>
                         Tamaño grande (12 porciones, 3kg): $U1,400.00
                     </p>
-                    <div class="ext_boton">
-                        <button class="boton">
+                    <div class="pc-contenedor-text-int-boton">
+                        <button class="pc-contenedor-text-int-boton-int">
                             Comprar
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="imagen3">
-                <img src="imagenes/rogel.png" alt="rogel">
+            <div class="pc-contenedor-img">
+                <img src="../imagenes/rogel.png" alt="rogel">
             </div>
         </div>
         <hr>
 
-        <div class="parte3">
-            <div class="imagen3">
-                <img src="imagenes/tarta.png" alt="tarta de frutas">
+        <div class="pc-contenedor">
+            <div class="pc-contenedor-img">
+                <img src="../imagenes/tarta.png" alt="tarta de frutas">
             </div>
-            <div class="contenedor3">
-                <div class="parrafo3">
-                    <p class="subtitulo">
+            <div class="pc-contenedor-text">
+                <div class="pc-contenedor-text-int">
+                    <p class="pc-contenedor-text-int-subtitulo">
                         Tarta de Frutas
                     </p>
                     <p>
@@ -195,8 +198,8 @@
                     <p>
                         Tamaño grande (12 porciones, 3kg): $U1,300.00
                     </p>
-                    <div class="ext_boton">
-                        <button class="boton">
+                    <div class="pc-contenedor-text-int-boton">
+                        <button class="pc-contenedor-text-int-boton-int">
                             Comprar
                         </button>
                     </div>
@@ -205,10 +208,10 @@
         </div>
         <hr>
 
-        <div class="parte3">
-            <div class="contenedor3">
-                <div class="parrafo3">
-                    <p class="subtitulo">
+        <div class="pc-contenedor al_reves">
+            <div class="pc-contenedor-text">
+                <div class="pc-contenedor-text-int">
+                    <p class="pc-contenedor-text-int-subtitulo">
                         Tiramisu
                     </p>
                     <p>
@@ -220,15 +223,15 @@
                     <p>
                         Tamaño grande (12 porciones, 3kg): $U1,400.00
                     </p>
-                    <div class="ext_boton">
-                        <button class="boton">
+                    <div class="pc-contenedor-text-int-boton">
+                        <button class="pc-contenedor-text-int-boton-int">
                             Comprar
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="imagen3"> 
-                <img src="imagenes/tiramisu.png" alt="tiramisu">
+            <div class="pc-contenedor-img"> 
+                <img src="../imagenes/tiramisu.png" alt="tiramisu">
             </div>
         </div>
 
