--- a/html/tortas_personalizadas.html
+++ b/html/tortas_personalizadas.html
@@ -34,7 +34,7 @@
 
             <div>
                 <a class="navbar-brand" href="index.html">
-                    <img src="imagenes/logo.png" alt="" class="logo">
+                    <img src="../imagenes/logo.png" alt="" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
     <!-- CONTENIDO DE LA PAGINA -->
     <section class="tp">
 
-        <div class="parrafo2">
+        <div class="tp-text">
             <p>
                 Envíanos tu idea para la torta personalizada de tus sueños, con detalles sobre la temática, la
                 cantidad de personas y la fecha del evento, y te proporcionaremos un presupuesto a medida!
@@ -82,13 +82,13 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="imagenes/tp1.png" class="d-block w-100" alt="...">
+                        <img src="../imagenes/tp1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/tp2.png" class="d-block w-100" alt="...">
+                        <img src="../imagenes/tp2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagenes/tp3.png" class="d-block w-100" alt="...">
+                        <img src="../imagenes/tp3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -105,7 +105,7 @@
 
         </div>
 
-        <div class="parrafo2">
+        <div class="tp-text">
             <p>
                 Podes hacerlo directamente desde "Contacto" o
                 escribirnos a nuestras redes sociales. Elegí tu temática, colores, relleno, gustos y mucho más.
