--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Inicio</title>
 
@@ -48,16 +48,16 @@
                         <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="tortas_personalizadas.html">Tortas Personalizadas</a>
+                        <a class="nav-link" href="./html/tortas_personalizadas.html">Tortas Personalizadas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="postres_clasicos.html">Postres Clasicos</a>
+                        <a class="nav-link" href="./html/postres_clasicos.html">Postres Clasicos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="envios.html">Envios</a>
+                        <a class="nav-link" href="./html/envios.html">Envios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="./html/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
