--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div>
                 <a class="navbar-brand" href="index.html">
-                    <img src="../imagenes/logo.png" alt="" class="logo">
+                    <img src="./imagenes/logo.png" alt="" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,13 +72,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../imagenes/inicio1.jpg" class="d-block w-100" alt="macarons">
+                    <img src="./imagenes/inicio1.jpg" class="d-block w-100" alt="macarons">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/inicio2.jpg" class="d-block w-100" alt="torta">
+                    <img src="./imagenes/inicio2.jpg" class="d-block w-100" alt="torta">
                 </div>
                 <div class="carousel-item">
-                    <img src="../imagenes/inicio3.jpg" class="d-block w-100" alt="tarta">
+                    <img src="./imagenes/inicio3.jpg" class="d-block w-100" alt="tarta">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -102,78 +102,78 @@
 
         <div class="torta">
             <div class="torta-int">
-                <img src="../imagenes/1.png" alt="">
+                <img src="./imagenes/1.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/2.png" alt="">
+                <img src="./imagenes/2.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/3.png" alt="">
-            </div>
-        </div>
-        <hr>
-
-        <div class="torta">
-            <div class="torta-int">
-                <img src="../imagenes/4.png" alt="">
-            </div>
-            <div class="torta-int">
-                <img src="../imagenes/5.png" alt="">
-            </div>
-            <div class="torta-int">
-                <img src="../imagenes/6.png" alt="">
+                <img src="./imagenes/3.png" alt="">
             </div>
         </div>
         <hr>
 
         <div class="torta">
             <div class="torta-int">
-                <img src="../imagenes/7.png" alt="">
+                <img src="./imagenes/4.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/8.png" alt="">
+                <img src="./imagenes/5.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/9.png" alt="">
-            </div>
-        </div>
-        <hr>
-
-        <div class="torta">
-            <div class="torta-int">
-                <img src="../imagenes/10.png" alt="">
-            </div>
-            <div class="torta-int">
-                <img src="../imagenes/11.png" alt="">
-            </div>
-            <div class="torta-int">
-                <img src="../imagenes/12.png" alt="">
+                <img src="./imagenes/6.png" alt="">
             </div>
         </div>
         <hr>
 
         <div class="torta">
             <div class="torta-int">
-                <img src="../imagenes/13.png" alt="">
+                <img src="./imagenes/7.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/14.png" alt="">
+                <img src="./imagenes/8.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/15.png" alt="">
+                <img src="./imagenes/9.png" alt="">
             </div>
         </div>
         <hr>
 
         <div class="torta">
             <div class="torta-int">
-                <img src="../imagenes/16.png" alt="">
+                <img src="./imagenes/10.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/17.png" alt="">
+                <img src="./imagenes/11.png" alt="">
             </div>
             <div class="torta-int">
-                <img src="../imagenes/18.png" alt="">
+                <img src="./imagenes/12.png" alt="">
+            </div>
+        </div>
+        <hr>
+
+        <div class="torta">
+            <div class="torta-int">
+                <img src="./imagenes/13.png" alt="">
+            </div>
+            <div class="torta-int">
+                <img src="./imagenes/14.png" alt="">
+            </div>
+            <div class="torta-int">
+                <img src="./imagenes/15.png" alt="">
+            </div>
+        </div>
+        <hr>
+
+        <div class="torta">
+            <div class="torta-int">
+                <img src="./imagenes/16.png" alt="">
+            </div>
+            <div class="torta-int">
+                <img src="./imagenes/17.png" alt="">
+            </div>
+            <div class="torta-int">
+                <img src="./imagenes/18.png" alt="">
             </div>
         </div>
         <hr>
