--- a/html/tortas_personalizadas.html
+++ b/html/tortas_personalizadas.html
@@ -77,31 +77,13 @@
             </p>
         </div>
 
-        <div class="imagen2">
+        <div class="tp-ext">
 
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../imagenes/tp1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../imagenes/tp2.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../imagenes/tp3.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+            <img src="../imagenes/tp1.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/tp2.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/tp3.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/tp4.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/tp5.jpg" alt="" class="tp-ext-img">
 
         </div>
 
