Se hacen varios cambios esteticos y se agregan algunas carpetas con el fin de organizar el proyecto

--- a/html/envios.html
+++ b/html/envios.html
@@ -40,9 +40,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav menu">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="tortas_personalizadas.html">Tortas Personalizadas</a>
                     </li>
                     <li class="nav-item">
@@ -60,7 +57,6 @@
         </nav>
 
     </header>
-    <hr>
 
     <!-- CONTENIDO DE LA PAGINA -->
     <section class="envios">
@@ -76,7 +72,7 @@
             <div class="envios-borde-contenedor">
 
                 <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1636.0808331340745!2d-56.17787528433256!3d-34.90239223820869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81b4c1267fa5%3A0xecea05927f6be283!2sAv.%2018%20de%20Julio%201805%2C%2011200%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1703511268738!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1636.0808331340745!2d-56.17787528433256!3d-34.90239223820869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f81b4c1267fa5%3A0xecea05927f6be283!2sAv.%2018%20de%20Julio%201805%2C%2011200%20Montevideo%2C%20Departamento%20de%20Montevideo!5e0!3m2!1ses-419!2suy!4v1703511268738!5m2!1ses-419!2suy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="envios-borde-contenedor-map"></iframe>
                 </div>
 
             </div>
@@ -94,36 +90,45 @@
     <!-- PIE DE PAGINA -->
     <footer>
 
+        <div class="cont">
+
+            <div class="cont-logo">
+                <img src="../imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+            </div>
+
+            <div class="cont-info">
+                <p>
+                    Tel: 2400 2859 <br>
+                    Av. 18 de Julio 1805 <br>
+                    bakery@bakery.com.uy <br>
+                    Lunes a Sábado de 09:00 a 20:00 hs <br>
+                    Domingo de 09:00 a 14:00 hs
+                </p>
+            </div>
+
+            <div class="cont-rs">
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+                    </a>
+                </div>
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                    </a>
+                </div>
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-instagram fa-2xl"></i>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
         <div class="copy">
             <p>
                 <i class="fa-regular fa-copyright"></i> 2024 | Desarrollo web por Victoria Firpo
-            </p>
-        </div>
-
-        <div class="rs">
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
-                </a>
-            </div>
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-facebook fa-2xl"></i>
-                </a>
-            </div>
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-instagram fa-2xl"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="info">
-            <p>
-                2400 2859 <br>
-                Av. 18 de Julio 1805 <br>
-                bakery@bakery.com.uy <br>
-                Lunes a Sábado de 09:00 a 20:00 hs, Domingo de 09:00 a 14:00 hs <br>
             </p>
         </div>
 
