--- a/html/tortas_personalizadas.html
+++ b/html/tortas_personalizadas.html
@@ -45,9 +45,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav menu">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="tortas_personalizadas.html">Tortas Personalizadas</a>
                     </li>
                     <li class="nav-item">
@@ -65,7 +62,6 @@
         </nav>
 
     </header>
-    <hr>
 
     <!-- CONTENIDO DE LA PAGINA -->
     <section class="tp">
@@ -79,17 +75,23 @@
 
         <div class="tp-ext">
 
-            <img src="../imagenes/tp1.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/tp2.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/tp3.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/tp4.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/tp5.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp1.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp2.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp3.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp4.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp5.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp6.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp7.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp8.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp9.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp10.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp11.jpg" alt="" class="tp-ext-img">
 
         </div>
 
         <div class="tp-text">
             <p>
-                Podes hacerlo directamente desde "Contacto" o
+                Podes hacerlo directamente desde <a href="contacto.html" class="tp-text-cont">Contacto</a> o
                 escribirnos a nuestras redes sociales. Elegí tu temática, colores, relleno, gustos y mucho más.
                 Recordá que cuanta más información nos brindes acerca de lo que querés más fácil será cumplir
                 con el pedido!
@@ -101,36 +103,45 @@
     <!-- PIE DE PAGINA -->
     <footer>
 
+        <div class="cont">
+
+            <div class="cont-logo">
+                <img src="../imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+            </div>
+
+            <div class="cont-info">
+                <p>
+                    Tel: 2400 2859 <br>
+                    Av. 18 de Julio 1805 <br>
+                    bakery@bakery.com.uy <br>
+                    Lunes a Sábado de 09:00 a 20:00 hs <br>
+                    Domingo de 09:00 a 14:00 hs
+                </p>
+            </div>
+
+            <div class="cont-rs">
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+                    </a>
+                </div>
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                    </a>
+                </div>
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-instagram fa-2xl"></i>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
         <div class="copy">
             <p>
                 <i class="fa-regular fa-copyright"></i> 2024 | Desarrollo web por Victoria Firpo
-            </p>
-        </div>
-
-        <div class="rs">
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
-                </a>
-            </div>
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-facebook fa-2xl"></i>
-                </a>
-            </div>
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-instagram fa-2xl"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="info">
-            <p>
-                2400 2859 <br>
-                Av. 18 de Julio 1805 <br>
-                bakery@bakery.com.uy <br>
-                Lunes a Sábado de 09:00 a 20:00 hs, Domingo de 09:00 a 14:00 hs <br>
             </p>
         </div>
 
