--- a/html/postres_clasicos.html
+++ b/html/postres_clasicos.html
@@ -40,9 +40,6 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav menu">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="tortas_personalizadas.html">Tortas Personalizadas</a>
                     </li>
                     <li class="nav-item">
@@ -60,14 +57,15 @@
         </nav>
 
     </header>
-    <hr>
 
     <!-- CONTENIDO DE LA PAGINA -->
     <section class="pc">
 
         <div class="pc-contenedor">
+            <div class="pc-contenedor-linea">
+            </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/carrotcake.png" alt="carrot cake">
+                <img src="../imagenes/img_pc/carrotcake.jpg" alt="carrot cake" class="pc-contenedor-img-int">
             </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">    
@@ -91,9 +89,10 @@
                 </div>
             </div>
         </div>
-        <hr>
 
         <div class="pc-contenedor al_reves">
+            <div class="pc-contenedor-linea">
+            </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
 
@@ -119,14 +118,15 @@
                 </div>
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/cheesecake.png" alt="cheese cake">
+                <img src="../imagenes/img_pc/cheesecake.jpg" alt="cheese cake" class="pc-contenedor-img-int">
             </div>
         </div>
-        <hr>
 
         <div class="pc-contenedor">
+            <div class="pc-contenedor-linea">
+            </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/lemonpie.png" alt="lemon pie">
+                <img src="../imagenes/img_pc/lemonpie.jpg" alt="lemon pie" class="pc-contenedor-img-int">
             </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
@@ -150,9 +150,10 @@
                 </div>
             </div>
         </div>
-        <hr>
 
         <div class="pc-contenedor al_reves">
+            <div class="pc-contenedor-linea">
+            </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
                     <p class="pc-contenedor-text-int-subtitulo">
@@ -175,14 +176,15 @@
                 </div>
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/rogel.png" alt="rogel">
+                <img src="../imagenes/img_pc/rogel.jpg" alt="rogel" class="pc-contenedor-img-int">
             </div>
         </div>
-        <hr>
 
         <div class="pc-contenedor">
+            <div class="pc-contenedor-linea">
+            </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/tarta.png" alt="tarta de frutas">
+                <img src="../imagenes/img_pc/tarta.jpg" alt="tarta de frutas" class="pc-contenedor-img-int">
             </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
@@ -206,9 +208,10 @@
                 </div>
             </div>
         </div>
-        <hr>
 
         <div class="pc-contenedor al_reves">
+            <div class="pc-contenedor-linea">
+            </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
                     <p class="pc-contenedor-text-int-subtitulo">
@@ -231,7 +234,7 @@
                 </div>
             </div>
             <div class="pc-contenedor-img"> 
-                <img src="../imagenes/tiramisu.png" alt="tiramisu">
+                <img src="../imagenes/img_pc/tiramisu.jpg" alt="tiramisu" class="pc-contenedor-img-int">
             </div>
         </div>
 
@@ -240,36 +243,45 @@
     <!-- PIE DE PAGINA -->
     <footer>
 
+        <div class="cont">
+
+            <div class="cont-logo">
+                <img src="../imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+            </div>
+
+            <div class="cont-info">
+                <p>
+                    Tel: 2400 2859 <br>
+                    Av. 18 de Julio 1805 <br>
+                    bakery@bakery.com.uy <br>
+                    Lunes a Sábado de 09:00 a 20:00 hs <br>
+                    Domingo de 09:00 a 14:00 hs
+                </p>
+            </div>
+
+            <div class="cont-rs">
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+                    </a>
+                </div>
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                    </a>
+                </div>
+                <div class="cont-rs-icon">
+                    <a href="" class="cont-rs-icon-links">
+                        <i class="fa-brands fa-square-instagram fa-2xl"></i>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
         <div class="copy">
             <p>
                 <i class="fa-regular fa-copyright"></i> 2024 | Desarrollo web por Victoria Firpo
-            </p>
-        </div>
-
-        <div class="rs">
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
-                </a>
-            </div>
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-facebook fa-2xl"></i>
-                </a>
-            </div>
-            <div class="rs-icon">
-                <a href="" class="rs-icon-links">
-                    <i class="fa-brands fa-square-instagram fa-2xl"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="info">
-            <p>
-                2400 2859 <br>
-                Av. 18 de Julio 1805 <br>
-                bakery@bakery.com.uy <br>
-                Lunes a Sábado de 09:00 a 20:00 hs, Domingo de 09:00 a 14:00 hs <br>
             </p>
         </div>
 
