Se agregan las etiquetas meta

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="keywords" content="Bakery, Repostería, Tortas de cumpleaños, Postres clásicos, Tortas en Uruguay, Postres en Uruguay, Tortas aesthetic montevideo, Tortas aesthetic por el centro, Tortas aesthetic Uruguay, Tortas de cumpleaños aesthetic">
+
+    <meta name="description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+
+    <!-- Protocolo Open graph -->
+    <meta property="og:title" content=Bakery>
+    <meta property="og:site_name" content=Bakery>
+    <meta property="og:url" content="https://bakery-e2ia-365d2ek23-victorias-projects-5b1a48f0.vercel.app/html/contacto.html">
+    <meta property="og:description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+    <link rel="icon" href="/imagenes/logo.ico">
+
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +29,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Contacto</title>
+    <title>Bakery - Contacto</title>
 
 </head>
 <body>
@@ -29,7 +42,7 @@
 
             <div>
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../imagenes/logo.png" alt="" class="logo">
+                    <img src="../imagenes/logo.png" alt="Logo de Bakery" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -109,7 +122,7 @@
     
                     <div class="contacto-borde-ext-cont1-img">
 
-                        <img src="../imagenes/logo.png" alt="Bakery" class="contacto-borde-ext-cont1-img-int">
+                        <img src="../imagenes/logo.png" alt="Logo de Bakery" class="contacto-borde-ext-cont1-img-int">
 
                     </div>
 
@@ -142,7 +155,7 @@
         <div class="cont">
 
             <div class="cont-logo">
-                <img src="../imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+                <img src="../imagenes/logo.png" alt="Logo de Bakery" class="cont-logo-int">
             </div>
 
             <div class="cont-info">
@@ -157,17 +170,17 @@
 
             <div class="cont-rs">
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-facebook fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-instagram fa-2xl"></i>
                     </a>
                 </div>
