--- a/html/postres_clasicos.html
+++ b/html/postres_clasicos.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="keywords" content="Bakery, Postres baratos, Postres clásicos baratos, Lemon-pie, Cheese-cake, Tiramisu, Tarta de frutas, Rogel, Carrot cake, Postres clásicos, Postres en uruguay, Postres baratos en uruguay, Postres baratos por el centro">
+
+    <meta name="description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+
+    <!-- Protocolo Open graph -->
+    <meta property="og:title" content=Bakery>
+    <meta property="og:site_name" content=Bakery>
+    <meta property="og:url" content="https://bakery-e2ia-365d2ek23-victorias-projects-5b1a48f0.vercel.app/html/contacto.html">
+    <meta property="og:description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+    <link rel="icon" href="/imagenes/logo.ico">
+
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +29,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Postres Clásicos</title>
+    <title>Bakery - Postres Clásicos</title>
 
 </head>
 <body>
@@ -29,7 +42,7 @@
 
             <div>
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../imagenes/logo.png" alt="" class="logo">
+                    <img src="../imagenes/logo.png" alt="Logo de Bakery" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +78,7 @@
             <div class="pc-contenedor-linea">
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/img_pc/carrotcake.jpg" alt="carrot cake" class="pc-contenedor-img-int">
+                <img src="../imagenes/img_pc/carrotcake.jpg" alt="Carrot cake" class="pc-contenedor-img-int">
             </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">    
@@ -118,7 +131,7 @@
                 </div>
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/img_pc/cheesecake.jpg" alt="cheese cake" class="pc-contenedor-img-int">
+                <img src="../imagenes/img_pc/cheesecake.jpg" alt="Cheese-cake" class="pc-contenedor-img-int">
             </div>
         </div>
 
@@ -126,7 +139,7 @@
             <div class="pc-contenedor-linea">
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/img_pc/lemonpie.jpg" alt="lemon pie" class="pc-contenedor-img-int">
+                <img src="../imagenes/img_pc/lemonpie.jpg" alt="Lemon-pie" class="pc-contenedor-img-int">
             </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
@@ -176,7 +189,7 @@
                 </div>
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/img_pc/rogel.jpg" alt="rogel" class="pc-contenedor-img-int">
+                <img src="../imagenes/img_pc/rogel.jpg" alt="Rogel" class="pc-contenedor-img-int">
             </div>
         </div>
 
@@ -184,7 +197,7 @@
             <div class="pc-contenedor-linea">
             </div>
             <div class="pc-contenedor-img">
-                <img src="../imagenes/img_pc/tarta.jpg" alt="tarta de frutas" class="pc-contenedor-img-int">
+                <img src="../imagenes/img_pc/tarta.jpg" alt="Tarta de frutas" class="pc-contenedor-img-int">
             </div>
             <div class="pc-contenedor-text">
                 <div class="pc-contenedor-text-int">
@@ -234,7 +247,7 @@
                 </div>
             </div>
             <div class="pc-contenedor-img"> 
-                <img src="../imagenes/img_pc/tiramisu.jpg" alt="tiramisu" class="pc-contenedor-img-int">
+                <img src="../imagenes/img_pc/tiramisu.jpg" alt="Tiramisu" class="pc-contenedor-img-int">
             </div>
         </div>
 
@@ -246,7 +259,7 @@
         <div class="cont">
 
             <div class="cont-logo">
-                <img src="../imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+                <img src="../imagenes/logo.png" alt="Logo de Bakery" class="cont-logo-int">
             </div>
 
             <div class="cont-info">
@@ -261,17 +274,17 @@
 
             <div class="cont-rs">
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-facebook fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-instagram fa-2xl"></i>
                     </a>
                 </div>
