--- a/html/tortas_personalizadas.html
+++ b/html/tortas_personalizadas.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="keywords" content="Bakery, Tortas aesthetic, Tortas creativas, Tortas infantiles, Tortas delicadas, Tortas originales, Tortas baratas, Tortas Personalizadas, Tortas con colores pastel, Tortas con macarons, Tortas llamativas, Tortas color rosa, Tortas color celeste, Tortas para 14 de febrero, Tortas verde, Tortas amarillo, Tortas color negro, Tortas color lila">
+
+    <meta name="description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+
+    <!-- Protocolo Open graph -->
+    <meta property="og:title" content=Bakery>
+    <meta property="og:site_name" content=Bakery>
+    <meta property="og:url" content="https://bakery-e2ia-365d2ek23-victorias-projects-5b1a48f0.vercel.app/html/contacto.html">
+    <meta property="og:description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+    <link rel="icon" href="/imagenes/logo.ico">
+
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +33,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Tortas Personalizadas</title>
+    <title>Bakery - Tortas Personalizadas</title>
 
 </head>
 
@@ -34,7 +47,7 @@
 
             <div>
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../imagenes/logo.png" alt="" class="logo">
+                    <img src="../imagenes/logo.png" alt="Logo de Bakery" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,37 +91,37 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../imagenes/img_tp/tp1.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp1.jpg" class="d-block w-100" alt="Torta lila con macarons y rosas y detalle dorado">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp2.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp2.jpg" class="d-block w-100" alt="Torta lila con macarons y rosas y detalle en blanco">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp3.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp3.jpg" class="d-block w-100" alt="Torta love, roja con macarons y rosas de chocolate">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp4.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp4.jpg" class="d-block w-100" alt="Torta rosa y blanca con mariposas">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp5.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp5.jpg" class="d-block w-100" alt="Torta sencilla blanca con rosas">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp6.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp6.jpg" class="d-block w-100" alt="Torta celestre y rosada con temática bajo el agua">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp7.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp7.jpg" class="d-block w-100" alt="Torta arcoiris con colores pastel y unicornio">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp8.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp8.jpg" class="d-block w-100" alt="Torta celestre con detalles en negro, Torta 15 años">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp9.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp9.jpg" class="d-block w-100" alt="Torta verde agua claro con macarrons">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp10.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp10.jpg" class="d-block w-100" alt="Torta negra y dorada">
                   </div>
                   <div class="carousel-item">
-                    <img src="../imagenes/img_tp/tp11.jpg" class="d-block w-100" alt="...">
+                    <img src="../imagenes/img_tp/tp11.jpg" class="d-block w-100" alt="Torta de cumpleaños rosa pastel decorada con rosas">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -125,17 +138,17 @@
 
         <div class="tp-ext">
 
-            <img src="../imagenes/img_tp/tp1.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp2.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp3.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp4.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp5.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp6.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp7.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp8.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp9.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp10.jpg" alt="" class="tp-ext-img">
-            <img src="../imagenes/img_tp/tp11.jpg" alt="" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp1.jpg" alt="Torta lila con macarons y rosas y detalle dorado" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp2.jpg" alt="Torta lila con macarons y rosas y detalle en blanco" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp3.jpg" alt="Torta love, roja con macarons y rosas de chocolate" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp4.jpg" alt="Torta rosa y blanca con mariposas" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp5.jpg" alt="Torta sencilla blanca con rosas" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp6.jpg" alt="Torta celestre y rosada con temática bajo el agua" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp7.jpg" alt="Torta arcoiris con colores pastel y unicornio" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp8.jpg" alt="Torta celestre con detalles en negro, Torta 15 años" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp9.jpg" alt="Torta verde agua claro con macarrons" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp10.jpg" alt="Torta negra y dorada" class="tp-ext-img">
+            <img src="../imagenes/img_tp/tp11.jpg" alt="Torta de cumpleaños rosa pastel decorada con rosas" class="tp-ext-img">
 
         </div>
 
@@ -156,7 +169,7 @@
         <div class="cont">
 
             <div class="cont-logo">
-                <img src="../imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+                <img src="../imagenes/logo.png" alt="Logo de Bakery" class="cont-logo-int">
             </div>
 
             <div class="cont-info">
@@ -171,17 +184,17 @@
 
             <div class="cont-rs">
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-facebook fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-instagram fa-2xl"></i>
                     </a>
                 </div>
