--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="keywords" content="Bakery, Tortas aesthetic, Tortas de cumpleaños, Tortas infantiles, Tortas delicadas, Tortas originales, Tortas baratas, Tortas Personalizadas, Torta de Bob esponja, Torta de Harry Potter, Torta de Escandalosos, Torta para un Baby-shower, Torta de Hot'Wheeles, Torta de Stranger things, Torta para 1 año, Torta de Fortnite, Torta de Manchester City">
+
+    <meta name="description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+
+    <!-- Protocolo Open graph -->
+    <meta property="og:title" content=Bakery>
+    <meta property="og:site_name" content=Bakery>
+    <meta property="og:url" content="https://bakery-e2ia-365d2ek23-victorias-projects-5b1a48f0.vercel.app/html/contacto.html">
+    <meta property="og:description" content="Con Bakery vas a darle vida a tus cumpleaños y eventos con tortas personalizadas y postres clásicos baratos y originales en pleno centro de montevideo,tenemos desde tortas delicadas para baby-Showers y cumpleaños infantiles hasta tortas de 15 años o temáticas a tu gusto!">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+    <link rel="icon" href="/imagenes/logo.ico">
+
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +33,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Inicio</title>
+    <title>Bakery - Inicio</title>
 
 </head>
 
@@ -34,7 +47,7 @@
 
             <div>
                 <a class="navbar-brand" href="index.html">
-                    <img src="./imagenes/logo.png" alt="" class="logo">
+                    <img src="./imagenes/logo.png" alt="Logo de Bakery" class="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,13 +81,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./imagenes/img_inicio/inicio1.jpg" class="d-block w-100" alt="macarons">
+                    <img src="./imagenes/img_inicio/inicio1.jpg" class="d-block w-100" alt="macarons de colores pastel">
                 </div>
                 <div class="carousel-item">
-                    <img src="./imagenes/img_inicio/inicio2.jpg" class="d-block w-100" alt="torta">
+                    <img src="./imagenes/img_inicio/inicio2.jpg" class="d-block w-100" alt="torta con baño de chocolate">
                 </div>
                 <div class="carousel-item">
-                    <img src="./imagenes/img_inicio/inicio3.jpg" class="d-block w-100" alt="tarta">
+                    <img src="./imagenes/img_inicio/inicio3.jpg" class="d-block w-100" alt="tartaleta de fresas">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -101,7 +114,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/1.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/1.png" alt="Torta de Escandalosos" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Escandalosos</p>
                         <p class="contenedor-int-card-intro-des">Torta inspirada en la serie de dibujitos animados "Escandalosos".</p>
@@ -111,7 +124,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/2.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/2.png" alt="Torta para Baby-shower beige" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Baby-Shower</p>
                         <p class="contenedor-int-card-intro-des">Torta pensada para un baby-shower, con colores delicados y temática infantil.</p>
@@ -121,7 +134,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/3.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/3.png" alt="Torta primer año con animalitos" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Primer Año</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, decorada con temática de savana.</p>
@@ -135,7 +148,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/4.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/4.png" alt="Torta de cumpleaños bajo el mar" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Seis Años</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, decorada con temática bajo el agua.</p>
@@ -145,7 +158,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/5.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/5.png" alt="Torta Baby-shower celeste con osito" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Baby-Shower</p>
                         <p class="contenedor-int-card-intro-des">Torta pensada para un baby-shower, con colores delicados y temática infantil.</p>
@@ -155,7 +168,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/6.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/6.png" alt="Torta de cumpleaños Hot-Wheeles" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Hot Wheels</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, con temática de los famosos autos "Hot-Wheels."</p>
@@ -169,7 +182,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/7.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/7.png" alt="Torta de cumpleaños de Stranger Things" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Stranger Things</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, inspirada en la reconocida serie "Stranger Things".</p>
@@ -179,7 +192,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/8.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/8.png" alt="Torta para Baby-shower celeste bajo el agua" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Baby-Shower</p>
                         <p class="contenedor-int-card-intro-des">Torta pensada para un baby-shower, con colores delicados y temática infantil.</p>
@@ -189,7 +202,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/9.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/9.png" alt="Torta de cumpleaños Fortnite" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Fortnite</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, inspirada en el popular videojuego "Fortnite".</p>
@@ -203,7 +216,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/10.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/10.png" alt="Torta primer año para niña delicada" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Primer Año</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, infantil con colores delicados para festejar el primer año.</p>
@@ -223,7 +236,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/12.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/12.png" alt="Torta de cumpleaños temática circo colorida" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Arcoiris</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, decorada con varios colores pastel y macarons.</p>
@@ -237,7 +250,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/13.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/13.png" alt="Torta infantil ABC" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta ABC</p>
                         <p class="contenedor-int-card-intro-des">Torta infantil, decorada con letras y colores.</p>
@@ -247,7 +260,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/14.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/14.png" alt="Torta de cumpleaños de Harry Potter" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Harry Potter</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, inspirada en la famosa saga de peliculas "Harry Potter".</p>
@@ -257,7 +270,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/15.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/15.png" alt="Torta de cumpleaños de Bob esponja" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Bob Esponja</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, inspirada en la exitosa serie de televisión "Bob Espoja".</p>
@@ -271,7 +284,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/16.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/16.png" alt="Torta primer año con animalitos" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Primer Año</p>
                         <p class="contenedor-int-card-intro-des">Torta de cumpleaños, decorada con temática de savana.</p>
@@ -281,7 +294,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/17.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/17.png" alt="Torta baby-shower niña colores delicados" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Baby-Shower</p>
                         <p class="contenedor-int-card-intro-des">Torta pensada para un baby-shower, con colores delicados y temática infantil.</p>
@@ -291,7 +304,7 @@
 
                 <div class="contenedor-int-card">
 
-                    <img src="./imagenes/img_tortas_inicio/18.png" alt="" class="contenedor-int-card-img">
+                    <img src="./imagenes/img_tortas_inicio/18.png" alt="Torta de cumpleaños de Manchester City" class="contenedor-int-card-img">
                     <div class="contenedor-int-card-intro">
                         <p class="contenedor-int-card-intro-titulo">Torta Manchester City</p>
                         <p class="contenedor-int-card-intro-des">Torta inspirada en el reconocido equipo de futbol de Inglaterra "Manchester City".</p>
@@ -311,7 +324,7 @@
         <div class="cont">
 
             <div class="cont-logo">
-                <img src="./imagenes/logo.png" alt="Bakery" class="cont-logo-int">
+                <img src="./imagenes/logo.png" alt="Logo de Bakery" class="cont-logo-int">
             </div>
 
             <div class="cont-info">
@@ -326,17 +339,17 @@
 
             <div class="cont-rs">
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-facebook fa-2xl"></i>
                     </a>
                 </div>
                 <div class="cont-rs-icon">
-                    <a href="" class="cont-rs-icon-links">
+                    <a target="_blank" href="" class="cont-rs-icon-links">
                         <i class="fa-brands fa-square-instagram fa-2xl"></i>
                     </a>
                 </div>
